--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
                 theme: localStorage.getItem('theme') || 'light',
                 authToken: localStorage.getItem('authToken'),
                 editorInstance: null,
-                faIcons: [] // 新增：用于缓存图标列表
+                faIcons: [] 
             },
 
             init() {
@@ -119,7 +119,7 @@
                 } else if (viewName === 'comments') {
                     await App.fetchRecentCommentsIfNeeded(true);
                     el.innerHTML = App.templates.commentsManager();
-                } else if (viewName === 'icons') { // 新增图标视图处理
+                } else if (viewName === 'icons') {
                     await App.fetchAndRenderIcons();
                 }
             },
@@ -205,7 +205,6 @@
             fetchRecentCommentsIfNeeded: async (force = false) => { if (App.state.recentComments.length === 0 || force) try { const res = await fetch(`${App.config.workerUrl}/api/comments/recent`); App.state.recentComments = await res.json(); } catch (e) {} },
             fetchSiteStatsIfNeeded: async (force = false) => { if (!App.state.siteStats || force) try { const res = await fetch(`${App.config.workerUrl}/api/stats`); App.state.siteStats = await res.json(); } catch (e) {} },
             
-            // --- 新增：获取并渲染图标列表的函数 ---
             fetchAndRenderIcons: async () => {
                 const el = document.getElementById('admin-content');
                 el.innerHTML = App.templates.loader();
@@ -216,7 +215,7 @@
                         const cssText = await response.text();
                         const iconRegex = /\.fa-([a-zA-Z0-9-]+):before/g;
                         const matches = [...cssText.matchAll(iconRegex)];
-                        App.state.faIcons = matches.map(match => match[1]); // 提取图标名, 如 'cat', 'dog'
+                        App.state.faIcons = matches.map(match => match[1]); 
                     } catch (error) {
                         console.error("Failed to fetch or parse icons CSS:", error);
                         el.innerHTML = '<p class="text-red-500">无法加载图标列表，请检查网络连接或控制台报错信息。</p>';
@@ -238,27 +237,26 @@
                 commentsManager: () => `<div class="w-full"><h2 class="text-xl font-semibold mb-6">评论管理</h2><div class="bg-white dark:bg-gray-800 shadow rounded-lg"><ul class="divide-y dark:divide-gray-700">${(App.state.recentComments || []).map(c => `<li class="p-4"><div class="flex justify-between items-start"><div class="text-sm"><p class="mb-1"><span class="font-bold">${c.nickname}</span> 评论了文章 <a href="index.html#/post/${c.slug}" target="_blank" class="text-blue-500">${c.postTitle}</a></p><p class="bg-gray-100 dark:bg-gray-700 p-2 rounded">${c.content}</p></div><button onclick="App.deleteComment('${c.id}')" class="text-red-500 hover:underline text-sm">删除</button></div></li>`).join('')}</ul></div></div>`,
                 siteSettingsEditor: () => { const stats = App.state.siteStats || {}; return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">网站设置</h2><form onsubmit="App.handleStatsFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow space-y-4"><h3 class="text-lg font-medium">联系方式</h3><div><label for="contact_email" class="block text-sm font-medium">联系邮箱</label><input type="email" id="contact_email" name="contact_email" value="${stats.contact_email || ''}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="contact_github" class="block text-sm font-medium">GitHub 地址</label><input type="url" id="contact_github" name="contact_github" value="${stats.contact_github || ''}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><h3 class="text-lg font-medium pt-4 border-t dark:border-gray-700">网站统计基数</h3><p class="text-sm text-gray-500">这里设置的值将作为统计的基数。</p><div><label for="posts_total" class="block text-sm font-medium">文章总数</label><input type="number" id="posts_total" name="posts_total" value="${stats.posts_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="categories_total" class="block text-sm font-medium">分类总数</label><input type="number" id="categories_total" name="categories_total" value="${stats.categories_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="comments_total" class="block text-sm font-medium">评论总数</label><input type="number" id="comments_total" name="comments_total" value="${stats.comments_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`;},
                 
-                // --- 新增：图标展示页面的模板 ---
                 iconExplorer: (icons = []) => `
                     <div class="w-full">
                         <h2 class="text-xl font-semibold mb-6">图标列表 (Font Awesome 5 Pro)</h2>
                         <p class="text-sm text-gray-500 mb-4">
-                            点击图标即可复制其CSS类名。使用时请根据需要添加样式前缀，如 <code>fas</code> (solid), <code>far</code> (regular), <code>fal</code> (light), <code>fab</code> (brands)。<br>
-                            例如: <code>&lt;i class="fas fa-cat"&gt;&lt;/i&gt;</code>
+                            点击图标即可复制其CSS类名。使用时请根据需要添加样式前缀 (例如: <code>fas</code>, <code>far</code>, <code>fal</code>, <code>fab</code>)。
                         </p>
-                        <div class="grid grid-cols-4 sm:grid-cols-6 md:grid-cols-8 lg:grid-cols-10 gap-4 bg-white dark:bg-gray-800 p-6 rounded-lg shadow" style="max-height: 70vh; overflow-y: auto;">
-                            ${icons.map(iconName => {
-                                const classToCopy = `fa-${iconName}`;
-                                // 默认使用 fas (solid) 样式进行预览
-                                return `
-                                <div class="flex flex-col items-center justify-center text-center p-3 border dark:border-gray-700 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700 cursor-pointer" 
-                                     onclick="navigator.clipboard.writeText('${classToCopy}')" 
-                                     title="点击复制: ${classToCopy}">
-                                    <i class="fas ${classToCopy} text-2xl mb-2"></i>
-                                    <span class="text-xs break-all">${classToCopy}</span>
-                                </div>
-                                `
-                            }).join('')}
+                        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow" style="max-height: 70vh; overflow-y: auto;">
+                            <div class="grid grid-cols-2 md:grid-cols-4 gap-x-6 gap-y-2">
+                                ${icons.map(iconName => {
+                                    const classToCopy = `fa-${iconName}`;
+                                    return `
+                                    <div class="flex items-center p-2 rounded-md hover:bg-gray-100 dark:hover:bg-gray-700 cursor-pointer" 
+                                         onclick="navigator.clipboard.writeText('${classToCopy}')" 
+                                         title="点击复制: ${classToCopy}">
+                                        <i class="fas ${classToCopy} fa-fw text-lg mr-3 text-center w-6"></i>
+                                        <span class="text-sm">${classToCopy}</span>
+                                    </div>
+                                    `
+                                }).join('')}
+                            </div>
                         </div>
                     </div>
                 `
