--- a/admin.html
+++ b/admin.html
@@ -23,21 +23,11 @@
         .icon-grid i { color: #606266; }
         .dark .icon-grid i { color: #9ca3af; }
         #icon-picker-modal { display: none; }
-
-        /* --- NEW BORDER RADIUS RULES START --- */
-        .rounded-lg {
-            border-radius: 0.2rem !important;
-        }
-        .rounded-md {
-            border-radius: 0.1rem !important;
-        }
-        /* --- NEW BORDER RADIUS RULES END --- */
     </style>
 </head>
 <body class="text-gray-800 dark:text-gray-200">
 
     <div id="app"></div>
-
     <div id="icon-picker-modal" class="fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
         <div class="bg-white dark:bg-gray-800 rounded-lg shadow-xl w-full max-w-4xl h-[80vh] flex flex-col">
             <header class="p-4 border-b dark:border-gray-700 flex justify-between items-center">
@@ -52,8 +42,6 @@
     </div>
 
     <script>
-        // The entire App script object remains unchanged.
-        // Copy the full script from the previous correct response.
         const App = {
             config: {
                 workerUrl: 'https://blog.xy193.workers.dev'
@@ -291,12 +279,20 @@
                 friendlyLinksEditor: () => `<div class="w-full"><h2 class="text-xl font-semibold mb-6">友情链接管理</h2><form onsubmit="App.handleLinksFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow"><div id="link-item-list" class="space-y-2 mb-4">${(App.state.friendlyLinks || []).map(link => `<div class="link-item-row flex items-center gap-2"><input type="text" name="name" value="${link.name}" class="flex-1 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><input type="text" name="url" value="${link.url}" class="flex-1 px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"><button type="button" onclick="App.removeLinkItemRow(this)" class="bg-red-500 text-white px-3 py-2 rounded-md">-</button></div>`).join('')}</div><button type="button" onclick="App.addLinkItemRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md mb-4">+ 添加</button><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 text-white py-2 px-4 rounded-md">保存</button></div></form></div>`,
                 commentsManager: () => `<div class="w-full"><h2 class="text-xl font-semibold mb-6">评论管理</h2><div class="bg-white dark:bg-gray-800 shadow rounded-lg"><ul class="divide-y dark:divide-gray-700">${(App.state.recentComments || []).map(c => `<li class="p-4"><div class="flex justify-between items-start"><div class="text-sm"><p class="mb-1"><span class="font-bold">${c.nickname}</span> 评论了文章 <a href="index.html#/post/${c.slug}" target="_blank" class="text-blue-500">${c.postTitle}</a></p><p class="bg-gray-100 dark:bg-gray-700 p-2 rounded">${c.content}</p></div><button onclick="App.deleteComment('${c.id}')" class="text-red-500 hover:underline text-sm">删除</button></div></li>`).join('')}</ul></div></div>`,
                 siteSettingsEditor: () => { const stats = App.state.siteStats || {}; return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">网站设置</h2><form onsubmit="App.handleStatsFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow space-y-4"><h3 class="text-lg font-medium">联系方式</h3><div><label for="contact_email" class="block text-sm font-medium">联系邮箱</label><input type="email" id="contact_email" name="contact_email" value="${stats.contact_email || ''}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="contact_github" class="block text-sm font-medium">GitHub 地址</label><input type="url" id="contact_github" name="contact_github" value="${stats.contact_github || ''}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><h3 class="text-lg font-medium pt-4 border-t dark:border-gray-700">网站统计基数</h3><p class="text-sm text-gray-500">这里设置的值将作为统计的基数。</p><div><label for="posts_total" class="block text-sm font-medium">文章总数</label><input type="number" id="posts_total" name="posts_total" value="${stats.posts_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="categories_total" class="block text-sm font-medium">分类总数</label><input type="number" id="categories_total" name="categories_total" value="${stats.categories_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div><label for="comments_total" class="block text-sm font-medium">评论总数</label><input type="number" id="comments_total" name="comments_total" value="${stats.comments_total || 0}" class="mt-1 block w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`;},
-                carouselManager: () => { const data = App.state.carouselData || { slides: [] }; setTimeout(() => { const container = document.getElementById('carousel-slides-list'); container.innerHTML = ''; if(data.slides && data.slides.length > 0) { data.slides.forEach(slide => App.addCarouselSlideRow(slide)); } else { App.addCarouselSlideRow(); } }, 0); return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">轮播图管理</h2><form onsubmit="App.handleCarouselFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow"><div class="mb-4"><h3 class="text-lg font-medium mb-2">海报列表</h3><div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold"><div class="col-span-6">图片 URL</div><div class="col-span-5">链接 URL</div></div><div id="carousel-slides-list" class="space-y-2"></div></div><button type="button" onclick="App.addCarouselSlideRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md mb-4">+ 添加海报</button><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`; },
+                carouselManager: () => {
+                    const data = App.state.carouselData || { slides: [] };
+                    setTimeout(() => {
+                        const container = document.getElementById('carousel-slides-list');
+                        container.innerHTML = '';
+                        if(data.slides && data.slides.length > 0) { data.slides.forEach(slide => App.addCarouselSlideRow(slide)); } 
+                        else { App.addCarouselSlideRow(); }
+                    }, 0);
+                    return `<div class="w-full"><h2 class="text-xl font-semibold mb-6">轮播图管理</h2><form onsubmit="App.handleCarouselFormSubmit(event)" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow"><div class="mb-4"><h3 class="text-lg font-medium mb-2">海报列表</h3><div class="grid grid-cols-12 gap-2 mb-2 text-sm font-semibold"><div class="col-span-6">图片 URL</div><div class="col-span-5">链接 URL</div></div><div id="carousel-slides-list" class="space-y-2"></div></div><button type="button" onclick="App.addCarouselSlideRow()" class="text-sm bg-gray-200 dark:bg-gray-700 py-2 px-4 rounded-md mb-4">+ 添加海报</button><div class="text-right border-t dark:border-gray-700 pt-4"><button type="submit" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">保存设置</button></div></form></div>`;
+                },
                 iconExplorer: (icons = []) => `<div class="w-full"><h2 class="text-xl font-semibold mb-6">图标列表 (Font Awesome 5 Pro)</h2><p class="text-sm text-gray-500 mb-4">下方列出了每个图标名称可用的所有样式。点击基础类名可直接复制。</p><div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow" style="max-height: 70vh; overflow-y: auto;"><div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">${icons.map(iconName => { const classToCopy = `fa-${iconName}`; return `<div class="p-3 border dark:border-gray-700 rounded-md"><p class="text-sm font-mono cursor-pointer hover:text-blue-500" onclick="navigator.clipboard.writeText('${classToCopy}')" title="点击复制: ${classToCopy}">${classToCopy}</p><div class="flex items-center justify-around mt-2 text-2xl text-center icon-grid"><i class="fas ${classToCopy} fa-fw" title="fas ${classToCopy}"></i><i class="far ${classToCopy} fa-fw" title="far ${classToCopy}"></i><i class="fal ${classToCopy} fa-fw" title="fal ${classToCopy}"></i><i class="fab ${classToCopy} fa-fw" title="fab ${classToCopy}"></i></div></div>`}).join('')}</div></div></div>`,
                 iconPickerGrid: (icons = []) => `<div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4">${icons.map(iconName => { const classToCopy = `fa-${iconName}`; return `<div class="icon-card p-3 border dark:border-gray-700 rounded-md" data-name="${classToCopy}"><p class="text-sm font-mono truncate mb-2">${classToCopy}</p><div class="flex items-center justify-around text-2xl text-center icon-grid"><i class="fas ${classToCopy} fa-fw cursor-pointer hover:text-blue-500" title="fas ${classToCopy}" onclick="App.selectIcon('fas ${classToCopy}')"></i><i class="far ${classToCopy} fa-fw cursor-pointer hover:text-blue-500" title="far ${classToCopy}" onclick="App.selectIcon('far ${classToCopy}')"></i><i class="fal ${classToCopy} fa-fw cursor-pointer hover:text-blue-500" title="fal ${classToCopy}" onclick="App.selectIcon('fal ${classToCopy}')"></i><i class="fab ${classToCopy} fa-fw cursor-pointer hover:text-blue-500" title="fab ${classToCopy}" onclick="App.selectIcon('fab ${classToCopy}')"></i></div></div>`}).join('')}</div>`,
             }
         };
-        
         App.init();
     </script>
 </body>
