--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .dark .content-area { color: #d1d5db; }
         .content-area a { color: #3b82f6; text-decoration: underline; }
         .dark .content-area a { color: #60a5fa; }
-        #back-to-top { position: fixed; bottom: 20%; right: 2rem; display: none; width: 38px; height: 38px; border-radius: 3px; background-color: rgb(188 188 188); color: #1e1e1e; transition: background-color 0.3s ease, color 0.3s ease; }
+        #back-to-top { position: fixed; bottom: 20%; right: 2rem; display: none; width: 38px; height: 38px; border-radius: 3px; background-color: rgb(188 188 188); color: #1e1e1e; transition: background-color: 0.3s ease, color: 0.3s ease; }
         #back-to-top:hover { background-color: rgb(123 123 123); color: #fff; }
         #back-to-top i { font-size: 15px; font-weight: 400; }
         body { background-color: #f5f5f5; }
@@ -191,8 +191,40 @@
                         .join('');
                     return `<aside id="sidebar"><div class="sidebar-inner-wrapper space-y-2">${modulesHtml}</div></aside>`;
                 },
+                
+                footer: () => {
+                    const stats = App.state.siteStats || {};
+                    const contactsHtml = (stats.custom_contacts || []).map(contact => 
+                        `<a href="#" class="flex items-center gap-x-1.5 hover:text-blue-500" title="${contact.content}">
+                            <i class="${contact.icon}"></i>
+                            <span>${contact.content}</span>
+                        </a>`
+                    ).join('');
 
-                footer: () => { const stats = App.state.siteStats || {}; return `<footer class="mt-auto text-sm text-gray-500 dark:text-gray-400 bg-white dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700"><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"><div class="py-8"><div class="flex flex-col items-center md:items-start space-y-[10px]"><div class="flex items-center"><span class="font-semibold text-gray-900 dark:text-gray-100">联系方式：</span><div class="flex items-center ml-2 space-x-[5px]">${stats.contact_email?`<a href="mailto:${stats.contact_email}" class="flex items-center gap-x-1.5 hover:text-blue-500" title="${stats.contact_email}"><i class="fas fa-envelope"></i><span>${stats.contact_email}</span></a>`:''}${stats.contact_github?`<a href="${stats.contact_github}" target="_blank" rel="noopener noreferrer" class="flex items-center gap-x-1.5 hover:text-blue-500"><i class="fab fa-github"></i><span>GitHub</span></a>`:''}</div></div><div class="flex items-center"><span class="font-semibold text-gray-900 dark:text-gray-100">网站统计：</span><div class="flex items-center ml-2 space-x-[5px]"><span class="flex items-center gap-x-1.5"><i class="fas fa-file-alt w-4 text-center"></i><span>文章总数: ${stats.posts_total||0}</span></span><span class="flex items-center gap-x-1.5"><i class="fas fa-folder w-4 text-center"></i><span>分类总数: ${stats.categories_total||0}</span></span><span class="flex items-center gap-x-1.5"><i class="fas fa-comments w-4 text-center"></i><span>评论总数: ${stats.comments_total||0}</span></span></div></div><div class="flex items-center"><span class="font-semibold text-gray-900 dark:text-gray-100">关于本站：</span><div class="ml-2"><span>Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span></div></div></div></div></div></footer>`; },
+                    return `<footer class="mt-auto text-sm text-gray-500 dark:text-gray-400 bg-white dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700">
+                        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                            <div class="py-8">
+                                <div class="flex flex-col items-center md:items-start space-y-[10px]">
+                                    <div class="flex items-center">
+                                        <span class="font-semibold text-gray-900 dark:text-gray-100">联系方式：</span>
+                                        <div class="flex items-center ml-2 space-x-[10px]">${contactsHtml}</div>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <span class="font-semibold text-gray-900 dark:text-gray-100">网站统计：</span>
+                                        <div class="flex items-center ml-2 space-x-[5px]">
+                                            <span class="flex items-center gap-x-1.5"><i class="fas fa-file-alt w-4 text-center"></i><span>文章总数: ${stats.posts_total||0}</span></span>
+                                            <span class="flex items-center gap-x-1.5"><i class="fas fa-folder w-4 text-center"></i><span>分类总数: ${stats.categories_total||0}</span></span>
+                                            <span class="flex items-center gap-x-1.5"><i class="fas fa-comments w-4 text-center"></i><span>评论总数: ${stats.comments_total||0}</span></span>
+                                        </div>
+                                    </div>
+                                    <div class="ml-2">
+                                        <span>Copyright © ${stats.copyright_year || ''} ${stats.copyright_name || ''} Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>`;
+                },
                 friendlyLinksSection: () => { if (!App.state.friendlyLinks || App.state.friendlyLinks.length === 0) return ''; return `<div class="max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8"><div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 p-6 my-8"><h3 class="font-semibold text-lg mb-4">友情链接</h3><div class="text-sm text-gray-600 dark:text-gray-400">${(App.state.friendlyLinks||[]).map(link=>`<a href="${link.url}" target="_blank" rel="noopener noreferrer" class="hover:text-blue-500 mr-4">${link.name}</a>`).join('')}</div></div></div>`; },
                 carousel: () => { const data = App.state.carouselData; if (!data || !data.slides || data.slides.length === 0) return ''; const slidesHtml = data.slides.map(slide => { const slideContent = `<img src="${slide.imageUrl}" class="w-full h-full object-cover">`; const linkWrapper = slide.linkUrl && slide.linkUrl !== '#' ? `<a href="${slide.linkUrl}" target="_blank" class="block w-full h-full">${slideContent}</a>` : slideContent; return `<div class="swiper-slide">${linkWrapper}</div>`; }).join(''); return `<div class="swiper w-full h-[230px] rounded-lg shadow-lg"><div class="swiper-wrapper">${slidesHtml}</div><div class="swiper-pagination"></div><div class="swiper-button-prev"></div><div class="swiper-button-next"></div></div>`; },
                 homePage: (posts, title = "最新文章") => `${App.templates.carousel()}<div class="mt-[18px]"><h1 class="text-[1.3rem] font-bold mb-2">${title}</h1><div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700"><div class="divide-y divide-gray-200 dark:divide-gray-700">${posts.length > 0 ? posts.map(post => App.templates.postCard(post)).join('') : '<p class="p-6">没有找到相关文章。</p>'}</div></div></div>`,
