--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                                             <span class="flex items-center gap-x-1.5"><i class="fas fa-comments w-4 text-center"></i><span>评论总数: ${stats.comments_total||0}</span></span>
                                         </div>
                                     </div>
-                                    <div class="ml-2">
-                                        <span>Copyright © ${stats.copyright_year || ''} ${stats.copyright_name || ''} Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span>
+                                    <div class="flex items-center">
+                                        <span>Copyright © 2025 号令天下 Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span>
                                     </div>
                                 </div>
                             </div>
