--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .dark .dark\:divide-gray-700 > :not([hidden]) ~ :not([hidden]), .dark .dark\:border-gray-700 { border-color: rgb(31 41 55 / 1) !important; }
         .rounded-lg { border-radius: 0.2rem !important; }
         .rounded-md { border-radius: 0.1rem !important; }
-        .swiper-button-next, .swiper-button-prev { color: #ffffff; background-color: rgba(0,0,0,0.25); width: 44px; height: 44px; border-radius: 50%; opacity: 0; transition: opacity 0.3s ease, background-color 0.3s ease; }
+        .swiper-button-next, .swiper-button-prev { color: #ffffff; background-color: rgba(0,0,0,0.25); width: 44px; height: 44px; border-radius: 50%; opacity: 0; transition: opacity 0.3s ease, background-color: 0.3s ease; }
         .swiper:hover .swiper-button-next, .swiper:hover .swiper-button-prev { opacity: 1; }
         .swiper-button-next:hover, .swiper-button-prev:hover { background-color: rgba(0,0,0,0.4); }
         .swiper-button-next:after, .swiper-button-prev:after { font-size: 20px; font-weight: bold; }
@@ -217,7 +217,7 @@
                                             <span class="flex items-center gap-x-1.5"><i class="fas fa-comments w-4 text-center"></i><span>评论总数: ${stats.comments_total||0}</span></span>
                                         </div>
                                     </div>
-                                    <div class="flex items-center">
+                                    <div>
                                         <span>Copyright © 2025 号令天下 Powered by Cloudflare Workers & Pages. Theme designed with Tailwind CSS.</span>
                                     </div>
                                 </div>
