--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="pl-5 flex-grow flex flex-col justify-between self-stretch">
                         <div>
                             <h2 class="text-xl font-bold mb-2"><a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}</a></h2>
-                            <div class="text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
+                            <div class="hidden md:block text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
                         </div>
                         <div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-2">
                             <span>${new Date(post.date).toLocaleDateString()}</span>
