--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         .dropdown-menu li:hover > .sub-menu { display: block; }
         .dark .dropdown-menu, .dark .sub-menu { background-color: #1f2937; border-color: #4b5563; }
         .sub-menu { top: -0.25rem; left: 100%; }
+
+        @media (max-width: 639.98px) {
+            .p-4 {
+                padding: 0.5rem;
+            }
+        }
     </style>
 </head>
 <body class="text-gray-800 dark:text-gray-200">
