--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         .sub-menu { top: -0.25rem; left: 100%; }
 
         @media (max-width: 639.98px) {
-            .p-4 {
+            body .p-4 {
                 padding: 0.5rem;
             }
         }
