--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             body .p-4 {
                 padding: 0.5rem;
             }
+            body .p-6 {
+                padding: 0.9rem;
+            }
         }
     </style>
 </head>
